option java_package = "org.example.order.generated.grpc";

message OrderRPC {
  required string id = 1;
  required string customerId = 2;
  required int64 amount = 3;
  required string status = 4;
  required string created = 5;
  optional string placed = 6;
  optional string failed = 7;
  optional string message = 8;
}

service OrderService {
  rpc PlaceOrder(OrderRPC) returns (OrderRPC) {}
}

